--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.0.1",
     "history": "^4.10.1",
     "mongodb": "^3.5.4",
+    "node-fetch": "^2.6.0",
     "react-router-dom": "^5.1.2",
     "webpack-cli": "^3.3.11"
   },
