--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^4.10.1",
     "mongodb": "^3.5.4",
     "node-fetch": "^2.6.0",
+    "query-string": "^6.11.1",
     "react-router-dom": "^5.1.2",
     "webpack-cli": "^3.3.11"
   },
