--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "ejs": "^3.0.1",
+    "express": "^4.17.1",
     "history": "^4.10.1",
     "mongodb": "^3.5.4",
     "node-fetch": "^2.6.0",
