--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node server.js",
-    "build": "cross-env NODE_ENV=development webpack --config ./webpack.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.js --hot --host 0.0.0.0",
+    "build": "cross-env NODE_ENV=development webpack --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -33,6 +34,7 @@
     "cross-env": "^7.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "webpack": "^4.42.0"
+    "webpack": "^4.42.0",
+    "webpack-dev-server": "^3.10.3"
   }
 }
