--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "copy-webpack-plugin": "^5.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "lodash.omit": "^4.5.0",
     "mongodb": "^3.5.4",
     "node-fetch": "^2.6.0",
     "query-string": "^6.11.1",
