--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
