--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "js-alert": "^1.0.4",
     "lodash.omit": "^4.5.0",
     "mongodb": "^3.5.4",
     "node-fetch": "^2.6.0",
