--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "copy-webpack-plugin": "^5.1.1",
     "ejs": "^3.0.1",
@@ -22,6 +23,7 @@
     "lodash.omit": "^4.5.0",
     "mongodb": "^3.5.4",
     "node-fetch": "^2.6.0",
+    "node-pre-gyp": "^0.14.0",
     "query-string": "^6.11.1",
     "react-router-dom": "^5.1.2",
     "webpack-cli": "^3.3.11"
