--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cookie": "^0.4.0",
     "copy-webpack-plugin": "^5.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
